--- a/orga/app/components/table/header-sort.hbs
+++ b/orga/app/components/table/header-sort.hbs
@@ -8,7 +8,7 @@
         @withBackground={{false}}
         @size="small"
         @color="dark-grey"
-        aria-label="Trier par pertinence"
+        aria-label={{@ariaLabel}}
       />
     {{/unless}}
   </span>
