--- a/orga/app/components/tutorial-counter.hbs
+++ b/orga/app/components/tutorial-counter.hbs
@@ -1,5 +1,5 @@
 <div class="table__column--center">
   {{#if (gt @tutorials.length 0)}}
-    {{t 'pages.campaign-review.tube-recommendations.tutorial-total' count=@tutorials.length}}
+    {{t 'pages.campaign-review.table.column.tutorial-count.value' count=@tutorials.length}}
   {{/if}}
 </div>
