[ORGA] translate missing aria-labels in campaign report

--- a/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/details.hbs
@@ -4,7 +4,7 @@
      @route="authenticated.campaigns.campaign.assessments"
      @routeId={{@campaign.id}}
      @backButtonAriaLabel={{t 'common.actions.back'}}
-     aria-label={{t 'pages.campaign-individual-results.campaign-name'}}
+     aria-label={{t 'pages.campaign.name'}}
    >
     {{@campaign.name}}
    </PreviousPageButton>
