[ORGA] SR - refactor team-items translations and common cancel button

--- a/orga/app/components/edit-student-number-modal.hbs
+++ b/orga/app/components/edit-student-number-modal.hbs
@@ -19,7 +19,7 @@
       </div>
     </Modal::Body>
     <Modal::Footer class="edit-student-number-modal__actions">
-      <button type="button" class="button button--light-grey" {{on 'click' this.close}}>{{t "pages.students-sup.edit-student-number-modal.actions.cancel"}}</button>
+      <button type="button" class="button button--light-grey" {{on 'click' this.close}}>{{t "common.actions.cancel"}}</button>
       <button type="submit" disabled={{this.isDisabled}} class="button">{{t "pages.students-sup.edit-student-number-modal.actions.update"}}</button>
     </Modal::Footer>
   </form>
