--- a/orga/app/components/routes/authenticated/team/new-item.hbs
+++ b/orga/app/components/routes/authenticated/team/new-item.hbs
@@ -16,7 +16,7 @@
 
   <div class="form__validation">
     <button type="button" class="button button--no-color" {{on 'click' @cancel}}>
-      {{t 'pages.team-new-item.cancel-button'}}
+      {{t 'common.actions.cancel'}}
     </button>
     {{#if @isLoading}}
       <button type="button" disabled class="button button--regular">
