[ORGA] remove useless and untranslated alt on pix orga logo

--- a/orga/app/templates/join-request.hbs
+++ b/orga/app/templates/join-request.hbs
@@ -1,7 +1,7 @@
 <div class="join-request">
   <div class="panel join-request__panel">
     <div class="panel__image">
-      <img src="/pix-orga.svg" alt="Pix Orga">
+      <img src="/pix-orga.svg" alt="" role="none">
     </div>
     {{#if this.isSubmit}}
       <p class="join-request__success">
