--- a/orga/app/templates/login.hbs
+++ b/orga/app/templates/login.hbs
@@ -1,7 +1,7 @@
 <div class="login-page">
   <div class="panel login-page__panel">
     <div class="panel__image">
-      <img src="/pix-orga.svg" alt="Pix Orga">
+      <img src="/pix-orga.svg" alt="" role="none">
     </div>
     <h3 class="form-title">{{t 'pages.login.title'}}</h3>
     <Routes::LoginForm @isWithInvitation={{false}} @hasInvitationError={{this.hasInvitationError}} />
