--- a/orga/app/components/routes/login-or-register.hbs
+++ b/orga/app/components/routes/login-or-register.hbs
@@ -1,7 +1,7 @@
 <div class="login-or-register">
   <div class="panel login-or-register__panel">
     <div>
-      <img src="/pix-orga.svg" alt="Pix Orga" class="login-or-register-panel__logo">
+      <img src="/pix-orga.svg" alt="" role="none" class="login-or-register-panel__logo">
     </div>
     <span class="login-or-register-panel__invitation">{{t 'pages.login-or-register.invitation'}} {{@organizationName}}</span>
     <div class="login-or-register-panel__forms-container">
