--- a/orga/app/templates/terms-of-service.hbs
+++ b/orga/app/templates/terms-of-service.hbs
@@ -2,7 +2,7 @@
   <div class="terms-of-service-form">
 
     <div class="terms-of-service-form__logo">
-      <img src="/pix-orga.svg" alt="Pix Orga">
+      <img src="/pix-orga.svg" alt="" role="none">
     </div>
 
     <div class="terms-of-service-form__title">
