[ORGA] Delete useless and missing translation but refactor aria-label in icon-trigger

--- a/orga/app/components/routes/authenticated/sco-students/list-items.hbs
+++ b/orga/app/components/routes/authenticated/sco-students/list-items.hbs
@@ -85,6 +85,7 @@
                   @icon="ellipsis-v"
                   @dropdownButtonClass="list-students-page__dropdown-button"
                   @dropdownContentClass="list-students-page__dropdown-content"
+                  @ariaLabel={{t "pages.students-sco.actions.show-actions"}}
                 >
                   <Dropdown::Item @onClick={{fn this.openAuthenticationMethodModal student}}>
                     {{t "pages.students-sco.actions.manage-account"}}
