--- a/orga/app/components/dropdown/icon-trigger.hbs
+++ b/orga/app/components/dropdown/icon-trigger.hbs
@@ -1,13 +1,13 @@
 <div id="icon-trigger" class="dropdown" ...attributes>
   <PixIconButton
     @icon={{@icon}}
-    aria-label="{{t 'dropdown.arial-label'}}"
+    aria-label="{{@ariaLabel}}"
     class="{{@dropdownButtonClass}}"
     @triggerAction={{this.toggle}}
     @size="small"
     @color="dark-grey"
   />
-  <Dropdown::Content @display={{this.display}} @close={{this.close}} class="{{@dropdownContentClass}}" aria-label="Actions">
+  <Dropdown::Content @display={{this.display}} @close={{this.close}} class="{{@dropdownContentClass}}">
     {{yield}}
   </Dropdown::Content>
 </div>
