[ADMIN] Add submitButtonType component property
Add submitButtonType Modal component property to be able to change color of the Modal button

--- a/admin/app/components/confirm-popup.hbs
+++ b/admin/app/components/confirm-popup.hbs
@@ -8,6 +8,7 @@
   @position="center"
   @onSubmit={{@confirm}}
   @onHide={{@cancel}}
+  @submitButtonType={{if @submitButtonType @submitButtonType "primary"}}
 >
   <p>{{@message}}</p>
   <p class="confirm-popup__errors">{{@error}}</p>
