[ADMIN] Change design

--- a/admin/app/components/user-detail-personal-information.hbs
+++ b/admin/app/components/user-detail-personal-information.hbs
@@ -124,7 +124,9 @@
 </section>
 
 <section class="page-section mb_10 user-authentication-method">
-  <h2 class="page-section__title user-authentication-method__title">Méthodes de connexion</h2>
+  <header class="page-section__header">
+  <h2 class="page-section__title">Méthodes de connexion</h2>
+  </header>
   <div class="user-authentication-method__item" data-test-email>
     <span>Adresse e-mail</span>
     {{#if @user.hasEmailAuthenticationMethod}}
