--- a/admin/app/templates/authenticated/users/get.hbs
+++ b/admin/app/templates/authenticated/users/get.hbs
@@ -6,6 +6,6 @@
   </div>
 </header>
 
-<main class="page-body" id="organizations-get-page">
+<main class="page-body">
   <UserDetailPersonalInformation @user={{@model}}/>
 </main>
