--- a/admin/app/styles/misc/global.scss
+++ b/admin/app/styles/misc/global.scss
@@ -5,7 +5,7 @@ html, body {
 }
 
 html {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
   color: $grey-90;
 }
 
@@ -14,7 +14,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
 }
 
 figure.work-in-progress {
