Update ember 3.24.0 to 3.25.0

--- a/admin/app/templates/authenticated/certifications/certification/details.hbs
+++ b/admin/app/templates/authenticated/certifications/certification/details.hbs
@@ -19,7 +19,7 @@
             <div class="col">Score :</div>
             <div class="col certificate">{{this.score}}</div>
           </div>
-          {{#if this.juryScore includeZero=true}}
+          {{#if this.shouldDisplayJuryScore}}
             <div class="row jury">
               <div class="col">Score corrigé :</div>
               <div class="col jury">{{this.juryScore}}</div>
