[APP] Use PixProgressGauge in pix-app

--- a/mon-pix/app/styles/pages/_skill-review.scss
+++ b/mon-pix/app/styles/pages/_skill-review.scss
@@ -87,6 +87,13 @@
 
 .skill-review-competence {
 
+  &__table {
+
+    tr {
+      height: 76px;
+    }
+  }
+
   &__border {
     padding: 0.5rem 0;
     margin-right: 1rem;
