--- a/orga/app/styles/globals/competences.scss
+++ b/orga/app/styles/globals/competences.scss
@@ -13,6 +13,10 @@
     color: $grey-80;
   }
 
+  &__gauge {
+    padding-top: 16px;
+  }
+
   &__border {
     padding: 0.5rem 0;
     margin-right: 1rem;
