--- a/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
+++ b/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
@@ -76,7 +76,7 @@
   </PixBlock>
 {{/if}}
 
-{{#if this.showCustomResultPageDescription}}
+{{#if this.showOrganizationMessage}}
   <PixBlock class="skill-review__organization-message">
       {{#if this.organizationLogoUrl}}
         <div class="skill-review-organization-message__logo">
@@ -87,7 +87,7 @@
         <p class="skill-review-organization-message__title">Messsage de votre organisation</p>
         <p class="skill-review-organization-message__organization-name">{{this.organizationName}}</p>
         <div class="skill-review-organization-message__text">
-          <p>{{this.customResultPageDescription}}</p>
+          <p>{{this.organizationMessageText}}</p>
         </div>
       </div>
   </PixBlock>
