Use SkipLink and add anchor links

--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -1,4 +1,4 @@
-<section class="page-container dashboard-content">
+<main id="main" class="page-container dashboard-content">
   <h1 class="sr-only">{{t 'pages.dashboard.title'}}</h1>
 
   {{#if this.hasNewInformationToShow}}
@@ -118,4 +118,4 @@
     <!-- Div ajoutée afin de créer le layout Grid CSS -->
   </section>
 
-</section>
+</main>
