--- a/mon-pix/app/templates/campaigns/assessment/tutorial.hbs
+++ b/mon-pix/app/templates/campaigns/assessment/tutorial.hbs
@@ -2,7 +2,7 @@
 {{page-title 'Didacticiel'}}
 
 <div class="campaign-tutorial">
-  <main class="rounded-panel rounded-panel--strong campaign-tutorial__container">
+  <main id="main" class="rounded-panel rounded-panel--strong campaign-tutorial__container">
 
     <h1 class="sr-only">{{t 'pages.tutorial.title'}}</h1>
 
