--- a/mon-pix/app/templates/certifications/start.hbs
+++ b/mon-pix/app/templates/certifications/start.hbs
@@ -4,7 +4,7 @@
   <burger.outlet>
 
     <NavbarHeader @burger={{burger}} />
-    <PixBackgroundHeader>
+    <PixBackgroundHeader id="main">
 
       {{#if model.isCertifiable}}
         <PixBlock @shadow="heavy" class="certification-start-page__block">
