--- a/mon-pix/app/templates/competences/details.hbs
+++ b/mon-pix/app/templates/competences/details.hbs
@@ -1,14 +1,16 @@
 {{page-title @model.name}}
+
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
   <burger.outlet>
+
     <NavbarHeader @burger={{burger}} />
-    <div class="background-banner-wrapper competence-details">
+    <main id="main" class="background-banner-wrapper competence-details">
       <div class="background-banner"></div>
 
       <div class="rounded-panel rounded-panel--strong rounded-panel--over-background-banner">
         <ScorecardDetails @scorecard={{@model}} />
       </div>
-    </div>
+    </main>
 
     <Footer />
 
