--- a/mon-pix/app/templates/competences/results.hbs
+++ b/mon-pix/app/templates/competences/results.hbs
@@ -5,7 +5,7 @@
 
     <NavbarHeader @burger={{burger}} />
 
-    <div class="background-banner-wrapper">
+    <main id="main" class="background-banner-wrapper">
       <div class="background-banner"></div>
 
       <div class="rounded-panel rounded-panel--strong rounded-panel--over-background-banner">
@@ -50,7 +50,7 @@
           <ScorecardDetails @scorecard={{@model.scorecard}} />
         {{/if}}
       </div>
-    </div>
+    </main>
 
     <Footer />
 
