--- a/mon-pix/app/templates/components/profile-content.hbs
+++ b/mon-pix/app/templates/components/profile-content.hbs
@@ -1,4 +1,4 @@
-<div class="background-banner-wrapper">
+<main id="main" class="background-banner-wrapper">
   <div class="background-banner"></div>
 
   <div class="rounded-panel rounded-panel--strong rounded-panel--over-background-banner profile__panel">
@@ -27,4 +27,4 @@
       </p>
    {{/if}}
   </div>
-</div>
+</main>
