--- a/mon-pix/app/templates/fill-in-campaign-code.hbs
+++ b/mon-pix/app/templates/fill-in-campaign-code.hbs
@@ -8,6 +8,7 @@
       <div class="background-banner"></div>
 
       <main
+        id="main"
         class="fill-in-campaign-code__container rounded-panel rounded-panel--strong rounded-panel--over-background-banner">
         <h1 class="fill-in-campaign-code__title rounded-panel-title">
           {{this.firstTitle}}
