--- a/mon-pix/app/templates/fill-in-certificate-verification-code.hbs
+++ b/mon-pix/app/templates/fill-in-certificate-verification-code.hbs
@@ -4,7 +4,7 @@
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
   <burger.outlet>
     <NavbarHeader @burger={{burger}} />
-    <PixBackgroundHeader>
+    <PixBackgroundHeader id="main">
       <PixBlock class="fill-in-certificate-verification-code">
         <form class="fill-in-certificate-verification-code__form" autocomplete="off">
 
