--- a/mon-pix/app/templates/user-account.hbs
+++ b/mon-pix/app/templates/user-account.hbs
@@ -5,7 +5,7 @@
 
     <NavbarHeader @burger={{burger}} @campaignParticipations={{@model.campaignParticipations}}/>
 
-    <main>
+    <main id="main">
       <div class="background-banner">
         <div class="user-account__banner">
           <h1 class="user-account-banner__title">{{t 'pages.user-account.title'}}</h1>
