--- a/mon-pix/app/templates/user-certifications/index.hbs
+++ b/mon-pix/app/templates/user-certifications/index.hbs
@@ -1,5 +1,5 @@
-<div class="page-container user-certifications-page__container">
+<main id="main" class="page-container user-certifications-page__container">
     <h1 class="user-certifications-page__title">{{t "pages.certifications-list.title"}}</h1>
 
     <UserCertificationsPanel @certifications={{@model}} />
-</div>
+</main>
