--- a/admin/app/templates/authenticated/users/get.hbs
+++ b/admin/app/templates/authenticated/users/get.hbs
@@ -7,5 +7,5 @@
 </header>
 
 <main class="page-body">
-  <UserDetailPersonalInformation @user={{@model}}/>
+  <UserDetailPersonalInformation @user={{@model}} @removeAuthenticationMethod={{this.removeAuthenticationMethod}}/>
 </main>
