--- a/admin/app/styles/components/user-detail-personal-information-section.scss
+++ b/admin/app/styles/components/user-detail-personal-information-section.scss
@@ -21,13 +21,26 @@
   &__item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 150px;
     margin: 8px 0;
     color: $grey-40;
   }
 
+  &__remove-button {
+    background-color: transparent;
+    color: red;
+    font-size: 0.75rem;
+    border: none;
+    padding: 0 0 0 10px;
+  }
+
   .user-authentication-method-item {
+
+    &__label {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 175px;
+    }
 
     &__check {
       color: $success;
