[APP] add translations

--- a/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
+++ b/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
@@ -84,7 +84,7 @@
         </div>
       {{/if}}
       <div class="skill-review-organization-message__content">
-        <p class="skill-review-organization-message__title">Messsage de votre organisation</p>
+        <p class="skill-review-organization-message__title">{{t 'pages.skill-review.organization-message'}}</p>
         <p class="skill-review-organization-message__organization-name">{{this.organizationName}}</p>
         <div class="skill-review-organization-message__text">
           <p>{{this.organizationMessageText}}</p>
