--- a/mon-pix/app/templates/components/hexagon-score.hbs
+++ b/mon-pix/app/templates/components/hexagon-score.hbs
@@ -1,21 +1,15 @@
-<div class="hexagon-score {{this.aprilFoolClass}}" {{on 'mouseover' this.showHelp}} {{on 'mouseout' this.hideHelp}} {{ on 'click' this.restorePixScore }}
+<div class="hexagon-score" {{on 'mouseover' this.showHelp}} {{on 'mouseout' this.hideHelp}}
      role="tooltip"
      aria-describedby="hexagon-score-information__text">
   <div class="hexagon-score__content">
     <div class="hexagon-score-content__title">{{t 'common.pix'}}</div>
-    <div class="hexagon-score-content__pix-score">{{this.scoreString}}</div>
+    <div class="hexagon-score-content__pix-score">{{this.score}}</div>
     <div class="hexagon-score-content__pix-total">1024 <FaIcon @icon="info-circle"/></div>
   </div>
 
   <div class="hexagon-score__information hexagon-score-information__text {{this.displayHelp}}">
-    {{#if this.featureToggles.featureToggles.isAprilFoolEnabled}}
-      <span class="hexagon-score-information__text--strong">{{t 'pages.profile.april-fool-helper.title'}}</span>
-      <br><br>
-      {{t 'pages.profile.april-fool-helper.explanation' htmlSafe=true}}
-    {{else}}
-      <span class="hexagon-score-information__text--strong">{{t 'pages.profile.total-score-helper.title'}}</span>
-      <br><br>
-      {{t 'pages.profile.total-score-helper.explanation' maxReachablePixCount=this.maxReachablePixCount maxReachableLevel=this.maxReachableLevel htmlSafe=true}}
-    {{/if}}
+    <span class="hexagon-score-information__text--strong">{{t 'pages.profile.total-score-helper.title'}}</span>
+    <br><br>
+    {{t 'pages.profile.total-score-helper.explanation' maxReachablePixCount=this.maxReachablePixCount maxReachableLevel=this.maxReachableLevel htmlSafe=true}}
   </div>
 </div>
