--- a/admin/app/styles/app.scss
+++ b/admin/app/styles/app.scss
@@ -51,3 +51,4 @@
 @import 'components/target-profiles/details';
 @import 'components/target-profiles/insight';
 @import 'components/target-profiles/stages';
+@import 'components/badges/badge';
