Add component SkipLink

--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -102,6 +102,7 @@ of an adaptative/mobile-first approach — refactoring is welcome here */
 @import 'components/user-logged-menu';
 @import 'components/communication-banner';
 @import 'components/pix-toggle';
+@import 'components/skip-link';
 
 /* pages */
 @import 'pages/assessment-challenge';
