--- a/mon-pix/app/templates/components/navbar-header.hbs
+++ b/mon-pix/app/templates/components/navbar-header.hbs
@@ -1,3 +1,6 @@
+<Skiplink @href="#main" @label={{t 'common.skip-links.skip-to-content'}} />
+<Skiplink @href="#footer" @label={{t 'common.skip-links.skip-to-footer'}} />
+
 <nav class="navbar-header">
   {{#if (media 'isDesktop')}}
     <NavbarDesktopHeader @shouldShowTheMarianneLogo={{this.isFrenchDomainExtension}}/>
