Add a new nginx rule to allow 404 responses on broken paths in /images
The nginx server is currently configured to fallback on sending the file
index.html when a user requests any not found URL.

There is an exception on the folder /assets. We're adding an other
exception on /images.

--- a/orga/servers.conf.erb
+++ b/orga/servers.conf.erb
@@ -52,7 +52,11 @@ server {
     # Files in /assets/ are hash-suffixed, so it's safe to cache them indefinitely
     expires max;
   }
-
+ 
+  location /images/ {
+    expires 24h;
+  }
+ 
   location / {
     # Fall back to index.html for routes that don't match an existing file
     try_files $uri /index.html;
