--- a/certif/servers.conf.erb
+++ b/certif/servers.conf.erb
@@ -53,6 +53,10 @@ server {
     expires max;
   }
 
+  location /images/ {
+    expires 24h;
+  }
+
   location / {
     # Fall back to index.html for routes that don't match an existing file
     try_files $uri /index.html;
