feat: add sitemap route

--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -36,6 +36,10 @@
            class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.data-protection-policy'}}
         </a>
+
+        <LinkTo @route="sitemap" class="footer-navigation__item footer-navigation__item--internal-link">
+          {{t 'navigation.footer.sitemap'}}
+        </LinkTo>
       </div>
 
       <div class="footer-container-content__copyrights">
