feat: add sitemap component

--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -86,6 +86,7 @@ of an adaptative/mobile-first approach — refactoring is welcome here */
 @import 'components/rounded-panel';
 @import 'components/scorecard-details';
 @import 'components/signup-form';
+@import 'components/sitemap';
 @import 'components/timed-challenge-instructions';
 @import 'components/timeout-gauge';
 @import 'components/tutorial-item';
