Display badge criteria in the admin
Co-authored-by: Guillaume Lagorce <guillaume.lagorce@pix.fr>
Co-authored-by: Thomas Evano <thomas.evano@pix.fr>

--- a/admin/app/components/badges/badge.hbs
+++ b/admin/app/components/badges/badge.hbs
@@ -23,4 +23,19 @@
       </div>
     </div>
   </section>
+
+  <section class="page-section">
+    <div class="page-section__header">
+      <h2 class="page-section__title">Critères</h2>
+    </div>
+
+
+    <div class="page-section__details">
+      <ul>
+      {{#each @badge.badgeCriteria as |criterion|}}
+        <li><span>{{criterion.scope}}</span> <span>{{criterion.threshold}}</span></li>
+      {{/each}}
+      </ul>
+    </div>
+  </section>
 </main>
