--- a/mon-pix/app/styles/pages/_sign-form.scss
+++ b/mon-pix/app/styles/pages/_sign-form.scss
@@ -147,11 +147,15 @@
 
   &__bottom-decoration {
     display: flex;
-    width: 609px;
+    width: calc(100% + 90px);
     padding: 12px 0 32px 0;
 
+    @include device-is('mobile') {
+      width: 100%;
+    }
+
     hr {
-      width: 239px;
+      width: 100%;
       height: 1px;
       border: 1px solid $grey-20;
     }
@@ -159,6 +163,11 @@
     span {
       font-size: 16px;
       color: $grey-80;
+      padding: 0 25px;
+
+      @include device-is('mobile') {
+        padding: 0 15px;
+      }
     }
   }
 
