[APP] add My Account link in burger menu

--- a/mon-pix/app/templates/components/navbar-burger-menu.hbs
+++ b/mon-pix/app/templates/components/navbar-burger-menu.hbs
@@ -33,6 +33,9 @@
   <LinkTo @route="user-dashboard" class="navbar-burger-menu-navigation__item">
     {{t 'navigation.main.dashboard'}}
   </LinkTo>
+  <LinkTo @route="user-account" class="navbar-burger-menu-navigation__item" >
+    {{t 'navigation.user.account'}}
+  </LinkTo>
   <LinkTo @route="profile" class="navbar-burger-menu-navigation__item">
     {{t 'navigation.main.skills'}}
   </LinkTo>
