--- a/mon-pix/app/styles/components/_user-account-update-email.scss
+++ b/mon-pix/app/styles/components/_user-account-update-email.scss
@@ -4,6 +4,13 @@
   align-items: center;
   padding: 50px 0 60px 0;
 
+  h3 {
+    @include device-is('mobile') {
+      text-align: center;
+      line-height: 2rem;
+    }
+  }
+
   &__informations {
     padding-top: 12px;
     text-align: center;
