--- a/mon-pix/app/templates/sitemap.hbs
+++ b/mon-pix/app/templates/sitemap.hbs
@@ -3,7 +3,7 @@
   <burger.outlet>
     <NavbarHeader @burger={{burger}} />
 
-    <Sitemap @model={{@model}}/>
+    <Sitemap::Content @model={{@model}}/>
 
     <Footer />
   </burger.outlet>
