--- a/mon-pix/app/styles/globals/_buttons.scss
+++ b/mon-pix/app/styles/globals/_buttons.scss
@@ -169,7 +169,7 @@
     &:hover,
     &:focus-within {
       border: 2px solid white;
-      box-shadow: 0 0 0 2pt $blue;
+      box-shadow: 0 0 0 2px $blue;
     }
   }
 
