--- a/mon-pix/app/templates/components/signup-form.hbs
+++ b/mon-pix/app/templates/components/signup-form.hbs
@@ -26,6 +26,8 @@
   <form {{on "submit" this.signup}} class="sign-form__body">
     <span class="sign-form-body__instruction">{{t 'common.form.mandatory-fields' htmlSafe=true}}</span>
 
+    <fieldset>
+      <legend class="sr-only">{{t 'pages.sign-up.fields.legend'}}</legend>
     <div class="sign-form-body__input">
       <FormTextfield @label="{{t 'pages.sign-up.fields.firstname.label'}}"
                      @textfieldName="firstName"
@@ -74,27 +76,25 @@
 
     <div class="signup-form__cgu-container">
       <label for="pix-cgu" class="signup-form__cgu-label">
-        <div class="signup-form__cgu">
-          <Input @type="checkbox" @id="pix-cgu" @checked={{@user.cgu}} />
-           {{t 'pages.sign-up.fields.cgu.label' cguUrl=this.cguUrl htmlSafe=true}}
-          <a href={{this.cguUrl}} class="link" target="_blank" rel="noopener noreferrer"> {{t 'pages.sign-up.fields.cgu.cgu' cguUrl=this.cguUrl htmlSafe=true}} </a>
-        </div>
-
+        {{t 'pages.sign-up.fields.cgu.label' cguUrl=this.cguUrl htmlSafe=true}}
+        <a href={{this.cguUrl}} class="link" target="_blank" rel="noopener noreferrer"> {{t 'pages.sign-up.fields.cgu.cgu' cguUrl=this.cguUrl htmlSafe=true}} </a>
         {{#if @user.errors.cgu}}
-          <div class="sign-form__validation-error">
+          <div id="validationMessage-cgu" class="sign-form__validation-error" aria-live="polite">
             {{t 'pages.sign-up.fields.cgu.error'}}
           </div>
         {{/if}}
       </label>
+      <Input @type="checkbox" class="signup-form__cgu" id="pix-cgu" @checked={{@user.cgu}}/>
     </div>
 
+    </fieldset>
     <div class="sign-form-body__bottom-button">
       {{#if this.isLoading}}
-        <button type="button" disabled class="button button--uppercase button--thin button--round button--big">
+        <button type="button" disabled class="button button--uppercase button--thin button--big button--round button--border-focus">
           <span class="loader-in-button">&nbsp;</span>
         </button>
       {{else}}
-        <button type="submit" class="button button--uppercase button--thin button--round button--big">
+        <button type="submit" class="button button--uppercase button--thin button--round button--border-focus">
           {{t 'pages.sign-up.actions.submit'}}
         </button>
       {{/if}}
