[APP] Set footer navigation in nav with list

--- a/mon-pix/app/styles/components/_footer.scss
+++ b/mon-pix/app/styles/components/_footer.scss
@@ -56,6 +56,18 @@
       flex-direction: row;
       align-items: center;
     }
+
+    &-list {
+      list-style: none;
+      display: flex;
+      padding: 0;
+
+      li {
+        align-self: center;
+        display: inline;
+        padding: 0;
+      }
+    }
   }
 
   &__copyrights {
